Fixing CMake integration for HDF5 for C variant

--- a/src/cloudsc_c/CMakeLists.txt
+++ b/src/cloudsc_c/CMakeLists.txt
@@ -14,16 +14,8 @@ ecbuild_add_option( FEATURE CLOUDSC_C
 
 if( HAVE_CLOUDSC_C )
 
-    message("HDF5 include dirs: ${HDF5_C_INCLUDE_DIRS}")
-    message("HDF5 lib: ${HDF5_LIBRARIES}")
-    message("HDF5 lib c: ${HDF5_C_LIBRARIES}")
-    message("HDF5 library dirs: ${HDF5_C_LIBRARY_DIRS}")
-
     set( CMAKE_C_STANDARD 11 )
     set( CMAKE_C_STANDARD_REQUIRED ON )
-
-    # necessary for AC
-    link_directories(string (REPLACE ";" " " DEST "${HDF5_C_LIBRARY_DIRS}")>)
 
     ecbuild_add_library(
         TARGET dwarf-cloudsc-c-lib
@@ -45,15 +37,11 @@ if( HAVE_CLOUDSC_C )
             cloudsc/cloudsc_validate.c
             cloudsc/mycpu.h
             cloudsc/mycpu.c
-	PRIVATE_INCLUDES
-	    # $<${HAVE_HDF5}:${HDF5_C_INCLUDE_DIRS}> # works on LUMI, doesn't work on AC
-	    $<${HAVE_HDF5}:string (REPLACE ";" " " DEST "${HDF5_C_INCLUDE_DIRS}")> # necessar on AC, not on LUMI
 	PUBLIC_INCLUDES
             $<INSTALL_INTERFACE:include>
             $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/cloudsc>
         PUBLIC_LIBS
-	    $<${HAVE_HDF5}:hdf5>
-	    # $<${HAVE_HDF5}:string (REPLACE ";" " " DEST "${HDF5_C_LIBRARIES}")>
+	    $<${HAVE_HDF5}:hdf5::hdf5>
 	    $<${HAVE_SERIALBOX}:Serialbox::Serialbox_C>
 	    $<${HAVE_OMP}:OpenMP::OpenMP_C>
 	DEFINITIONS
