--- a/src/cloudsc_loki/cloudsc_cuf_loki.config
+++ b/src/cloudsc_loki/cloudsc_cuf_loki.config
@@ -78,6 +78,48 @@ expand = true
   block_dim = '%dimensions.block_dim%'
   derived_types = ['TECLDP']
 
+[transformations.cuf-parametrise-new]
+  classname = 'SccCufTransformationNew'
+  module = 'transformations.scc_cuf'
+[transformations.cuf-parametrise-new.options]
+  transformation_type = 'parametrise'
+  horizontal = '%dimensions.horizontal%'
+  vertical = '%dimensions.vertical%'
+  block_dim = '%dimensions.block_dim%'
+  derived_types = ['TECLDP']
+
+[transformations.cuf-hoist-new]
+  classname = 'SccCufTransformationNew'
+  module = 'transformations.scc_cuf'
+[transformations.cuf-hoist-new.options]
+  transformation_type = 'hoist'
+  horizontal = '%dimensions.horizontal%'
+  vertical = '%dimensions.vertical%'
+  block_dim = '%dimensions.block_dim%'
+  derived_types = ['TECLDP']
+
+[transformations.c-parametrise]
+  classname = 'SccCufTransformationNew'
+  module = 'transformations.scc_cuf'
+[transformations.c-parametrise.options]
+  transformation_type = 'parametrise'
+  horizontal = '%dimensions.horizontal%'
+  vertical = '%dimensions.vertical%'
+  block_dim = '%dimensions.block_dim%'
+  derived_types = ['TECLDP']
+  mode = 'c'
+
+[transformations.c-hoist]
+  classname = 'SccCufTransformationNew'
+  module = 'transformations.scc_cuf'
+[transformations.c-hoist.options]
+  transformation_type = 'hoist'
+  horizontal = '%dimensions.horizontal%'
+  vertical = '%dimensions.vertical%'
+  block_dim = '%dimensions.block_dim%'
+  derived_types = ['TECLDP']
+  mode = 'c'
+
 # For SCC-CUF-parametrise we need to define the
 # in-source replacement via "dic2p".
 [transformations.ParametriseTransformation]
